--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
