--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "keywords": ["invoice", "online", "package"],
     "homepage": "https://github.com/vgspedro/moloniapi",
     "license": "MIT",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=7.0"
     },
